# CodexTUI

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: renderer-plan.md  tui-remaining-work.md
scripts/: bootstrap-codexplus.sh  bootstrap-codextui.sh  dev-context-harness.sh
src/codex_plus/: __init__.py  __main__.py  cli.py  codex_stream.py  doctor.py  file_nav.py  fzf.py  models.py  paths.py  store.py  transcript.py  tui.py
src/codex_tui/: __init__.py  cli.py  codex_stream.py  doctor.py  fzf.py  models.py  paths.py  store.py  terminal_markdown.py  theme.py  transcript.py  transcript_blocks.py  tui.py  tui_textual.py
tests/: test_bootstrap_script.py  test_cli.py  test_codex_stream.py  test_doctor.py  test_file_nav.py  test_fzf.py  test_store.py  test_transcript.py  test_transcript_blocks.py  test_tui.py  test_tui_textual.py
tests/fixtures/: rollout-basic.jsonl  rollout-event-bootstrap.jsonl  rollout-files.jsonl  rollout-response-item-fallback.jsonl
