[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codextui"
version = "0.1.0"
description = "Unofficial local workbench for the OpenAI Codex CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ephemeraldream" },
]
keywords = ["codex", "cli", "history", "transcript", "fzf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ephemeraldream/CodexTUI"
Repository = "https://github.com/ephemeraldream/CodexTUI"
Issues = "https://github.com/ephemeraldream/CodexTUI/issues"

[project.scripts]
ctui = "codex_tui.cli:main"
cxp = "codex_tui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_tui", "src/codex_plus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
